[tool.poetry]
name = "buzzspike"
version = "0.1.0"
description = "get a buzz on Valorant kills!"
authors = ["Floozutter <me@floozutter.site>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.9"
mss = "^6.1.0"
opencv-python = "^4.5.2"
pytesseract = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
